--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
 <head>
 	<title>Really Great Reading-Media Player</title>
     <script src="js/jquery-3.6.1.min.js"></script>
-    <!--<script src="js/ws.js"></script>-->
-    <!--<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>-->
-    <!--test link addon ?vid=c928ed6b-57df-44a9-8768-5aea9c20ddc5&style=bubble-->
-    <!--JIM Link:https://www.reallygreatreading.com/rgrmp/v1_0/index.html?v=c928ed6b-57df-44a9-8768-5aea9c20ddc5&s=1-->
-    <!--REGGIE Link:https://www.reallygreatreading.com/rgrmp/v1_0/index.html?v=da637e63-ecc2-4f7d-a974-d19ef3e004fb&s=2-->
-    <link rel="stylesheet" type="text/css" href="css/media.css">
+  <link rel="stylesheet" type="text/css" href="css/media.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/colors.css">
 
@@ -17,7 +12,8 @@
 
 <body >
 	<div id="wrapper" role="main" >
-       <a href="https://media.reallygreatreading.com/player/7764a654-fabf-4371-9168-f4c10c63133f?s=170&l=https://rgrgithub.github.io/pbProofing/pb01st01/story.html">Playbook 1</a>
+        <a href='https://rgrgithub.github.io/pbProofing/olt-tools-media-player-ws/index.html?v=7764a654-fabf-4371-9168-f4c10c63133f&s=170&l=../pb01st01/story.html'>Playbook 0</a>
+       <!--<a href="https://media.reallygreatreading.com/player/7764a654-fabf-4371-9168-f4c10c63133f?s=170&l=https://rgrgithub.github.io/pbProofing/pb01st01/story.html">Playbook 1</a>-->
 	</div>
 </body>
 
