--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body >
 	<div id="wrapper" role="main" >
-        <a href='https://rgrgithub.github.io/pbProofing/olt-tools-media-player-ws/index.html?v=7764a654-fabf-4371-9168-f4c10c63133f&s=170&l=../pb01st01/story.html'>Playbook 0</a>
+        <a href='olt-tools-media-player-ws/index.html?v=7764a654-fabf-4371-9168-f4c10c63133f&s=170&l=../pb01st01/story.html'>Playbook 0</a>
        <!--<a href="https://media.reallygreatreading.com/player/7764a654-fabf-4371-9168-f4c10c63133f?s=170&l=https://rgrgithub.github.io/pbProofing/pb01st01/story.html">Playbook 1</a>-->
 	</div>
 </body>
